# data-governance-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUsersmattdata-governance-pipelinedocker_log.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  catalog_connectors.py  cdc_state.json  compliance_extensions.py  docker-compose.test.yml  docker-compose.yml  epic_extensions.py  governance_extensions.py  grafana_extensions.py  lineage_demo.html  lineage_graph.html  lineage_v2.html  metadata_extensions.py  parallel_runner.py  pipeline.py  pipeline_additions.py  pipeline_api.py  pipeline_documented.py  pipeline_preview.html  pipeline_scheduler.py  pipeline_streaming.py  pipeline_v2.py  pipeline_v3.py  pyproject.toml  readme.txt  requirements.txt  requirements_v2.txt  sample_data.json  sample_data_v3.json  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql.yml  docker.yml  governance-evidence.yml  integration-cloud.yml  test.yml
config/: anomaly_baseline.json  data_products.json  encryption_key_versions.json  erasure_notify.json  pipeline_watermark.json  schema_registry.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CCPA.md  CLOUD_VERIFICATION.md  DEPLOYMENT.md  DISTRIBUTED_GOVERNANCE.md  EXTENDING.md  GOVERNANCE.md  PRIVACY.md  README.md  SCOPE.md  SOURCES.md  TERMS.md
examples/canary/: track_record.jsonl
examples/data_gov_run/: README.md  config.json  provenance.json  usgs_all_day.csv
examples/distributed_run/: README.md  run.py
examples/policy_import/: README.md  catalog_export.json
examples/sample_run/: README.md  config.json  customers.csv
pipeline/: __init__.py  __main__.py  api.py  append_only_writer.py  audit_buffers.py  auth.py  business_rules.py  checkpoint.py  circuit_breaker.py  cli.py  compliance_wizard.py  compression.py  constants.py  crash_recovery.py  dashboard.py  data_enricher.py  data_standardiser.py  dead_letter_queue.py  exceptions.py  extract.py  governance_logger.py  governance_preflight.py  helpers.py  incremental_filter.py  ledger_writer.py  load_verifier.py  logging_setup.py  openapi_spec.py  parallel_runner.py  partitioned_governance.py  partitioned_ledger.py  profiler.py  prompts.py  rate_limiter.py  referential_integrity.py  run_artifacts.py  run_state.py  scheduler.py  schema_validator.py  secrets_manager.py  (+6 more)
pipeline/advanced/: __init__.py  dlq_replayer.py  nl_pipeline_builder.py  reversible_loader.py  table_copier.py
pipeline/catalog/: __init__.py  catalog_search.py  catalog_store.py  glossary.py  policy_importer.py
pipeline/extensions/: __init__.py  compliance_extensions.py  epic_extensions.py  governance_extensions.py  grafana_extensions.py
pipeline/extractors/: __init__.py  database_extractor.py  rest_extractor.py
pipeline/lineage/: __init__.py  openlineage_emitter.py
pipeline/loaders/: __init__.py  athena_loader.py  base.py  bigquery_loader.py  clickhouse_loader.py  cockroachdb_loader.py  databricks_loader.py  datasphere_loader.py  db2_loader.py  delta_lake_loader.py  duckdb_loader.py  firebolt_loader.py  hana_loader.py  iceberg_loader.py  kafka_loader.py  microsoft_fabric_loader.py  mongo_loader.py  oracle_loader.py  parquet_loader.py  postgis_loader.py  quickbooks_extractor.py  quickbooks_loader.py  redshift_loader.py  s3_loader.py  sftp_loader.py  snowflake_loader.py  sql_loader.py  synapse_loader.py  yellowbrick_loader.py
pipeline/ml_governance/: __init__.py  model_registry.py
pipeline/monitoring/: __init__.py  canary.py  metrics_collector.py  metrics_exporter.py  notifier.py  observability.py  sla_monitor.py
pipeline/privacy/: __init__.py  classification_tagger.py  column_encryptor.py  cross_border_transfer.py  erasure_handler.py  nlp_pii_detector.py  pii_discovery.py
pipeline/quality/: __init__.py  column_profiler.py  data_contract_enforcer.py  data_diff_reporter.py  data_quality_scorer.py  quality_anomaly_alerter.py  schema_evolver.py  synthetic_data_generator.py  test_generator.py
pipeline/reporting/: __init__.py  cost_estimator.py  html_report_generator.py  lineage_graph_generator.py  report_writer.py
pipeline/security/: __init__.py  access_policy.py
pipeline/streaming/: __init__.py  kafka_extractor.py  kinesis_extractor.py  pubsub_extractor.py
pipeline/versioning/: __init__.py  snapshot_store.py
scripts/: bench_distributed_governance.py  bench_pipeline.py  block_optional_deps.py  canary_run.py  lint_unreachable.py  preflight.py  real_dataset_run.py
tests/: conftest.py  test_advanced.py  test_api.py  test_api_load.py  test_append_only_writer.py  test_auth.py  test_base_loader.py  test_benchmarks.py  test_business_rules.py  test_canary.py  test_catalog.py  test_circuit_breaker.py  test_cli.py  test_compliance_wizard.py  test_compression.py  test_compression_security.py  test_compute_engine_equivalence.py  test_config_validation.py  test_constants.py  test_core_stages.py  test_crash_recovery.py  test_dashboard.py  test_data_enricher.py  test_data_standardiser.py  test_dlq_thread_safety.py  test_dry_run.py  test_end_to_end.py  test_exceptions.py  test_extract.py  test_glossary.py  test_governance_logger.py  test_governance_preflight.py  test_helpers.py  test_incremental_filter.py  test_integration_db.py  test_ledger_writer.py  test_lineage.py  test_load_verifier.py  test_logging_integration.py  test_logging_setup.py  (+30 more)
tests/integration/: __init__.py  test_cloud_credentialed.py  test_container_heavy_engines.py  test_container_sql_engines.py  test_container_streams_files.py  test_container_vector_engines.py  test_embedded_engines.py  test_emulator_engines.py  test_partitioned_governance_spark.py  test_partitioned_ledger_object_store.py
tests/test_extensions/: __init__.py  test_compliance_extensions.py  test_epic_extensions.py  test_governance_extensions.py  test_grafana_extensions.py
tests/test_loaders/: __init__.py  test_bigquery_loader.py  test_datasphere_loader.py  test_embedded_loaders.py  test_loader_contract.py  test_loader_dispatch.py  test_loader_regressions.py  (+12 more)
(+27 files in other folders)
