[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-governance-pipeline"
version = "4.23.0"
description = "Production-grade Python ETL pipeline with built-in GDPR, CCPA, HIPAA, and OMOP healthcare governance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "etl", "data-pipeline", "data-governance", "gdpr", "ccpa", "hipaa",
    "pii", "compliance", "audit", "healthcare", "epic-ehr", "omop",
    "data-engineering", "python",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — everything needed to run pipeline_v3.py
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyodbc>=5.0.0",
    "pymongo>=4.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
# Cloud warehouses and enterprise destinations
cloud = [
    "snowflake-sqlalchemy>=1.5.0",
    "snowflake-connector-python>=3.6.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "pyarrow>=14.0.0",
    "azure-identity>=1.15.0",
    "databricks-sql-connector>=3.0.0",
    "clickhouse-driver>=0.2.7",
    "cx_Oracle>=8.3.0",
    "ibm-db>=3.2.0",
]

# Streaming extractors and destinations (Kafka, Kinesis, Pub/Sub)
streaming = [
    "kafka-python>=2.0.0",
    "confluent-kafka>=2.3.0",
    "boto3>=1.34.0",
    "google-cloud-pubsub>=2.19.0",
]

# Scheduling
scheduler = [
    "schedule>=1.2.0",
]

# Healthcare / HIPAA extensions (epic_extensions.py)
healthcare = [
    "pyodbc>=5.0.0",   # Clarity SQL Server connection
    "pyarrow>=14.0.0", # OMOP vocabulary parquet files
]

# SAP integrations
sap = [
    "hdbcli>=2.19.0",
    "requests>=2.31.0",
]

# Data catalog connectors
catalogs = [
    "requests>=2.31.0",
]

# QuickBooks Online
quickbooks = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

# Vector databases
lancedb = [
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
]

# Managed and open-source vector databases
vector = [
    "pgvector>=0.2.0",
    "chromadb>=0.4.0",
    "pymilvus>=2.4.0",
    "pinecone-client>=3.0.0",
    "weaviate-client>=4.0.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.2.0",  # for embed_columns support
]

# CockroachDB distributed SQL
cockroachdb = [
    "sqlalchemy-cockroachdb>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

# Grafana observability integration
grafana = [
    "prometheus_client>=0.19.0",   # optional — stdlib fallback included
]

# Development / testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyflakes>=3.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Everything
all = [
    "data-governance-pipeline[cloud,streaming,scheduler,healthcare,sap,catalogs,quickbooks,lancedb,vector,cockroachdb,grafana]",
]

[project.urls]
Homepage      = "https://github.com/matthewryanweber/data-governance-pipeline"
Repository    = "https://github.com/matthewryanweber/data-governance-pipeline"
Issues        = "https://github.com/matthewryanweber/data-governance-pipeline/issues"
Changelog     = "https://github.com/matthewryanweber/data-governance-pipeline/blob/main/CHANGELOG.md"

[project.scripts]
# Run the full interactive pipeline wizard
pipeline = "pipeline_v3:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "governance*", "epic*", "catalog*", "metadata*"]

[tool.pytest.ini_options]
testpaths     = ["."]
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by black
    "F841",  # local variable assigned but never used (common in governance stubs)
]

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]
