[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-governance-pipeline"
version = "4.25.0"
description = "Production-grade Python ETL pipeline with built-in GDPR, CCPA, HIPAA, and OMOP healthcare governance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Matthew Weber", email = "matt@nyss.nyc" },
]

keywords = [
    "etl", "data-pipeline", "data-governance", "gdpr", "ccpa", "hipaa",
    "pii", "pii-detection", "compliance", "audit", "healthcare", "epic-ehr",
    "omop", "data-engineering", "data-quality", "data-lineage", "data-catalog",
    "schema-validation", "data-profiling", "vector-database", "snowflake",
    "bigquery", "redshift", "python",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies — everything needed to run pipeline_v3.py
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "lxml>=4.9.0",
    "defusedxml>=0.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pyodbc>=5.0.0",
    "pymongo>=4.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
# Cloud warehouses and enterprise destinations
cloud = [
    "snowflake-sqlalchemy>=1.5.0",
    "snowflake-connector-python>=3.6.0",
    "google-cloud-bigquery>=3.13.0",
    "google-cloud-bigquery-storage>=2.24.0",
    "pyarrow>=14.0.0",
    "azure-identity>=1.15.0",
    "databricks-sql-connector>=3.0.0",
    "clickhouse-connect>=0.7.0",
    "oracledb>=2.0.0",
    "ibm-db>=3.2.0",
    "redshift-connector>=2.0.0",
    "firebolt-sdk>=1.0.0",
]

# Streaming extractors and destinations (Kafka, Kinesis, Pub/Sub)
streaming = [
    "kafka-python>=2.0.0",
    "confluent-kafka>=2.3.0",
    "boto3>=1.34.0",
    "google-cloud-pubsub>=2.19.0",
]

# Scheduling
scheduler = [
    "schedule>=1.2.0",
]

# Healthcare / HIPAA extensions (epic_extensions.py)
healthcare = [
    "pyodbc>=5.0.0",   # Clarity SQL Server connection
    "pyarrow>=14.0.0", # OMOP vocabulary parquet files
]

# SAP integrations
sap = [
    "hdbcli>=2.19.0",
    "requests>=2.31.0",
]

# Data catalog connectors
catalogs = [
    "requests>=2.31.0",
]

# QuickBooks Online
quickbooks = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

# Vector databases
lancedb = [
    "lancedb>=0.5.0",
    "pyarrow>=14.0.0",
]

# Managed and open-source vector databases
vector = [
    "pgvector>=0.2.0",
    "chromadb>=0.4.0",
    "pymilvus>=2.4.0",
    "pinecone-client>=3.0.0",
    "weaviate-client>=4.0.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.2.0",  # for embed_columns support
]

# Data lake formats
datalake = [
    "duckdb>=1.0.0",
    "deltalake>=0.18.0",
    "pyiceberg>=0.7.0",
    "pyarrow>=14.0.0",
]

# Cloud object storage
objectstorage = [
    "boto3>=1.28.0",       # S3 + Athena
    "s3fs>=2023.9.0",      # S3 via pyarrow
    "gcsfs>=2023.9.0",     # Google Cloud Storage
    "adlfs>=2023.9.0",     # Azure Blob + Microsoft Fabric
]

# SFTP file transfer
sftp = [
    "paramiko>=3.0.0",
]

# Deprecated alias — use "datalake" instead
lakeformats = [
    "duckdb>=1.0.0",
    "deltalake>=0.18.0",
    "pyiceberg>=0.7.0",
    "pyarrow>=14.0.0",
]

# DuckDB embedded analytics + MotherDuck
duckdb_dest = [
    "duckdb>=0.10.0",
]

# CockroachDB distributed SQL
cockroachdb = [
    "sqlalchemy-cockroachdb>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

# OpenTelemetry distributed tracing
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]

# Grafana observability integration
grafana = [
    "prometheus_client>=0.19.0",   # optional — stdlib fallback included
]

# REST API server
api = [
    "quart>=0.19.0",
    "hypercorn>=0.17.0",
    "PyJWT>=2.8.0",
]

# Development / testing
dev = [
    "quart>=0.19.0",
    "PyJWT>=2.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyflakes>=3.1.0",
    "mypy>=1.8.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "PyYAML>=6.0.0",
    "faker>=22.0.0",
    "phonenumbers>=8.13.0",
    "hypothesis>=6.90.0",
    # Real DeadlineExceeded/RetryError classes for pubsub extractor tests —
    # lightweight, no transitive google-cloud SDKs.
    "google-api-core>=2.0.0",
]

# Everything
all = [
    "data-governance-pipeline[cloud,streaming,scheduler,healthcare,sap,catalogs,quickbooks,lancedb,vector,datalake,objectstorage,sftp,duckdb_dest,cockroachdb,grafana,otel,api]",
]

[project.urls]
Homepage      = "https://github.com/MatthewRyanWeber/data-governance-pipeline"
Documentation = "https://github.com/MatthewRyanWeber/data-governance-pipeline#readme"
Repository    = "https://github.com/MatthewRyanWeber/data-governance-pipeline"
Issues        = "https://github.com/MatthewRyanWeber/data-governance-pipeline/issues"
Changelog     = "https://github.com/MatthewRyanWeber/data-governance-pipeline/blob/main/CHANGELOG.md"

[project.scripts]
# Run the full interactive pipeline wizard
pipeline = "pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths     = ["tests"]
python_files  = ["test_*.py"]
python_classes= ["Test*"]
python_functions = ["test_*"]
addopts       = "-v --tb=short"
asyncio_mode  = "auto"
markers = [
    "integration: tests requiring Docker and real databases",
    "slow: long-running benchmarks and load tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by black
    "F841",  # local variable assigned but never used (common in governance stubs)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312", "py313"]
